2024-11-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/cpp/gcc/c-family/c-ppoutput.cc:
	  Fix bug #3794.
	* support/valdiag/tests/bug-3014.c:
	  Adapt test to recent K&R changes.

2024-11-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/scripts/sdcc.nsi:
	  Do not try to include XA-51 simulator (which is no longer built by default) in Windows installer.

2024-11-03 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h:
	  Add syntactic support for K&R-style functions.

2024-11-03 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  support/regression/tests/generic.c:
	  Add C2y generic selection based on a type name.

2024-11-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3795.c:
	  Add a regression test for a bug encountered in z88dk.

2024-11-03 Benedikt Freisen <b.freisen AT gmx.net>

	* support/regression/cases/Makefile.in:
	  Tidy up list of excluded test cases.

2024-11-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCpeeph.c:
	  Fix bug #3792.
	* src/SDCCopt.c:
	  Workaround for bug #3793.
	* src/SDCCmain.c:
	  Fix bug #3790.

2024-10-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3791.c:
	  Fix bug #3791.

2024-10-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3788.c:
	  Disable a test that assuems SDCC implementation-defined behaviour for host.
	* src/z80/peeph.def:
	  z80 peephole optimizer rule improvements.
	* src/z80/gen.c:
	  Improve use of information from generalized constant propagation in z80 subtraction code generation.
	* src/SDCCopt.c:
	  Optimize out a few more casts, part of RFE #937.

2024-10-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Fix some mentions of Windows in manual.
